{
    "name": "GameplayInputController",
    "maps": [
        {
            "name": "Touch",
            "id": "4775a10c-8108-486e-bcfa-88f882908ab8",
            "actions": [
                {
                    "name": "TouchInput",
                    "type": "PassThrough",
                    "id": "dde414b9-e993-4636-8bc9-5c45313c2a2f",
                    "expectedControlType": "Touch",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "8e46fce5-2acc-4cdc-9b7e-617d8de11033",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "699dce69-d6bc-4783-a961-a7ec9808b2b2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d76c62c3-6771-469f-8f09-a790b4619f96",
                    "path": "<Touchscreen>/primaryTouch",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchInput",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1c4d736c-7f65-4f58-a9bc-12c17d1eafe1",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "beded7e7-e4d2-4429-b82c-78ca9e541e3c",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}